[package]
name = "dictionary-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
itertools = "0.12.1"
reqwest = {version = "0.12.4", features = ["blocking"]}
scraper = "0.19.0"
serde = {version = "1.0.199", features = ["serde_derive"]}
serde_json = "1.0.116"
xml = "0.8.20"
